--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "author": "Artem \"ortamfag\" Zhidov",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "gulp-babel": "^8.0.0",
+        "nodemailer": "^6.9.5",
         "sharp": "^0.32.1"
     },
     "devDependencies": {
